--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	<!-- First section of document content -->
 	<div class="flex1">
-		<div class="flex-child">
+		<div>
 			<h1>What is Coronavirus ?</h1>
 			<p>A coronavirus is a kind of common virus that causes an infection in your nose, sinuses, or upper throat.
 				Most coronaviruses aren't dangerous.
@@ -56,7 +56,7 @@
 	<!-- Third section of document content -->
 	<div class="flex">
 		<!-- sub-section with paragraphs arranged in single column -->
-		<div class="flex-child">
+		<div>
 			<h1>Prevention</h1>
 			<p>Strategies for preventing transmission of the disease include maintaining overall good personal hygiene,
 				washing hands, avoiding touching the eyes, nose, or mouth with unwashed hands, and coughing or sneezing
